# ShipsGame

./: CMakeLists.txt  Field.cpp  Field.h  Game.cpp  Game.h  LICENSE  Ship.cpp  Ship.h  field.cpp  main.cpp
ships_lib/: CMakeLists.txt  Field.cpp  Field.h  Game.cpp  Game.h  Ship.cpp  Ship.h
tests/: CMakeLists.txt  field_test.cpp  game_test.cpp  ships_test.cpp
